# sier2-blocks-config

./: README.rst  pyproject.toml
src/sier2_blocks_config/blocks/: __init__.py  _example.py
src/sier2_blocks_config/shelf/: __init__.py
